--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,12 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body{
+    margin: 0;
+}
+main{
+    margin: 50px;
+}
 .logo, h3
 {
     font-family: 'Shrikhand', cursive;
@@ -21,6 +27,7 @@
 {
     background: darken($color-background, 5);
     padding: 10px;
+    border-radius: 20px 20px 0 0 ;
 }
 
 input[type="search"]
@@ -35,6 +42,7 @@ input[type="search"]
 {
     background: $color-background;
     padding: 40px 0 40px 0;
+    border-radius: 0 0 20px 20px;
     .menu_info
     {
         margin-top: 0;
@@ -48,6 +56,13 @@ button
     border-radius: 20px;
     padding: 10px;
     border: none;
+    font-size: 1rem;
+    margin: 5px;
+    &:hover{
+        font-size: 1.5rem;
+        margin: 0;
+        background: linear-gradient(lighten($color-secondary,10),lighten($color-primary, 10));
+    }
 }
 
 
@@ -61,15 +76,16 @@ button
     {
         display: flex;
         justify-content: space-around;
+        padding: 0;
     }
 }
 
-ol
+.functioning ol
 {
     list-style-type: none;
 }
 
-li
+.functioning li
 {
     counter-increment: li;
     background: $color-background;
@@ -105,10 +121,11 @@ li
 .container
 {
     background: $color-background;
+    border-radius: 20px;
 
     &__title{
         text-align: center;
-        ;
+        padding-top: 25px;
     }
     &__restaurant{
            display: flex;
@@ -125,7 +142,7 @@ li
         }
         img{
         width: 100%;
-        height: 150px;
+        height: 250px;
         object-fit: cover;
         }
         figcaption{
@@ -145,5 +162,27 @@ li
             top: 25px;
             font-size: 30px;
         }
+    }
+}
+
+footer{
+    background: #000;
+    h3{
+        color: #FFF;
+        text-align: center;
+    }
+    ul{
+        text-align: center;
+        margin: 0;
+        padding-bottom: 30px;
+    }
+    li{
+        margin: 5px;
+    }
+    a{
+        color: #FFF;
+    }
+    i{
+        @extend a;
     }
 }
