--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
   font-family: "Roboto", sans-serif;
 }
 
+body {
+  margin: 0;
+}
+
+main {
+  margin: 50px;
+}
+
 .logo, h3 {
   font-family: "Shrikhand", cursive;
 }
@@ -15,6 +23,7 @@
 .search {
   background: rgba(226, 224, 224, 0.7333333333);
   padding: 10px;
+  border-radius: 20px 20px 0 0;
 }
 
 input[type=search] {
@@ -27,6 +36,7 @@ input[type=search] {
 .menu {
   background: #eeededbb;
   padding: 40px 0 40px 0;
+  border-radius: 0 0 20px 20px;
 }
 .menu .menu_info {
   margin-top: 0;
@@ -38,6 +48,13 @@ button {
   border-radius: 20px;
   padding: 10px;
   border: none;
+  font-size: 1rem;
+  margin: 5px;
+}
+button:hover {
+  font-size: 1.5rem;
+  margin: 0;
+  background: linear-gradient(#fface8, #ae80e5);
 }
 
 .functioning__title {
@@ -46,13 +63,14 @@ button {
 .functioning__list {
   display: flex;
   justify-content: space-around;
+  padding: 0;
 }
 
-ol {
+.functioning ol {
   list-style-type: none;
 }
 
-li {
+.functioning li {
   counter-increment: li;
   background: #eeededbb;
   width: 30%;
@@ -63,7 +81,7 @@ li {
   align-items: center;
   font-weight: bold;
 }
-li::before {
+.functioning li::before {
   content: counter(li);
   background: #9356DC;
   display: inline-block;
@@ -72,21 +90,23 @@ li::before {
   border-radius: 50%;
   text-align: center;
 }
-li:hover {
+.functioning li:hover {
   background: #fff3fc;
 }
-li i {
+.functioning li i {
   padding: 5px;
 }
-li i:hover {
+.functioning li i:hover {
   color: #9356DC;
 }
 
 .container {
   background: #eeededbb;
+  border-radius: 20px;
 }
 .container__title {
   text-align: center;
+  padding-top: 25px;
 }
 .container__restaurant {
   display: flex;
@@ -102,7 +122,7 @@ li i:hover {
 }
 .container__restaurant-card img {
   width: 100%;
-  height: 150px;
+  height: 250px;
   object-fit: cover;
 }
 .container__restaurant-card figcaption {
@@ -117,6 +137,25 @@ li i:hover {
   right: 20px;
   top: 25px;
   font-size: 30px;
+}
+
+footer {
+  background: #000;
+}
+footer h3 {
+  color: #FFF;
+  text-align: center;
+}
+footer ul {
+  text-align: center;
+  margin: 0;
+  padding-bottom: 30px;
+}
+footer li {
+  margin: 5px;
+}
+footer a, footer i {
+  color: #FFF;
 }
 
 /*# sourceMappingURL=style.css.map */
