--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,13 +5,21 @@
     text-decoration: none;
     color: #000;
     font-family: 'Roboto', sans-serif;
-}
-
-body{
     margin: 0;
 }
+
+header{
+    margin: 0 50px;
+    position: relative;
+    a{
+        position: absolute;
+        font-size: 2.5rem;
+        top: 15px;
+    }
+}
+
 main{
-    margin: 50px;
+    margin: 0 50px;
 }
 .logo, h3
 {
@@ -41,12 +49,11 @@ input[type="search"]
 .menu
 {
     background: $color-background;
-    padding: 40px 0 40px 0;
+    padding: 40px 0 20px 0;
     border-radius: 0 0 20px 20px;
-    .menu_info
+    &__info
     {
-        margin-top: 0;
-        font-size: 20px;
+        margin-top: 10px;
     }
 }
 
@@ -57,10 +64,8 @@ button
     padding: 10px;
     border: none;
     font-size: 1rem;
-    margin: 5px;
+    margin: 20px;
     &:hover{
-        font-size: 1.5rem;
-        margin: 0;
         background: linear-gradient(lighten($color-secondary,10),lighten($color-primary, 10));
     }
 }
@@ -77,6 +82,7 @@ button
         display: flex;
         justify-content: space-around;
         padding: 0;
+        margin: 20px;
     }
     ol{
         list-style-type: none;
@@ -109,13 +115,11 @@ button
     }
     &:hover{
         background: lighten($color-primary, 35);
-            }
+        }
     i 
     {
         padding: 5px;
-        &:hover{
-            color: $color-primary;
-        }
+        
     }
 }
 
@@ -137,6 +141,7 @@ button
     }
     &__restaurant-card{
         width: 45%;
+        margin: 25px;
 
         figure{
             background: #FFF;
@@ -181,6 +186,7 @@ footer{
     h3{
         color: #FFF;
         text-align: center;
+        font-size: 1.5rem;
     }
     ul{
         text-align: center;
@@ -206,19 +212,50 @@ footer{
     }
     
 }
-.card{
+
+.container-menu{
     background: $color-background;
     border-radius: 30px;
     position: relative;
-    margin: -80px 20px 0 20px;
+    margin: -80px 20px 20px 20px;
+}
+.title{
+    text-align: center;
+    font-size: 1.5rem;
+}
 
-    .title{
-        text-align: center;
-        font-size: 1.5rem;
+.card{
+    display: flex;
+    justify-content: space-around;
+    
+    &__menu{
+        width: 25%;
     }
 
     &__menu h4 {
         border-bottom: 2px solid $color-tertiary;
         width: 40px;
     }
+}
+.meal{
+    background: #FFF;
+    border-radius: 20px;
+    width: 100%;
+    margin: 35px 0;
+    padding: 10px;
+    position: relative;
+    
+    p{
+        font-size: 0.8rem;
+        padding-top: 10px;
+    }
+    &__price{
+        position: absolute;
+        right: 10px;
+        top: 15px;
+        font-weight: bold;
+    }
+}
+.order-button{
+    text-align: center;
 }
