--- a/style.css
+++ b/style.css
@@ -2,14 +2,21 @@
   text-decoration: none;
   color: #000;
   font-family: "Roboto", sans-serif;
-}
-
-body {
   margin: 0;
 }
 
+header {
+  margin: 0 50px;
+  position: relative;
+}
+header a, header footer i, footer header i {
+  position: absolute;
+  font-size: 2.5rem;
+  top: 15px;
+}
+
 main {
-  margin: 50px;
+  margin: 0 50px;
 }
 
 .logo, h3 {
@@ -35,12 +42,11 @@ input[type=search] {
 
 .menu {
   background: #eeeded;
-  padding: 40px 0 40px 0;
+  padding: 40px 0 20px 0;
   border-radius: 0 0 20px 20px;
 }
-.menu .menu_info {
-  margin-top: 0;
-  font-size: 20px;
+.menu__info {
+  margin-top: 10px;
 }
 
 button {
@@ -49,11 +55,9 @@ button {
   padding: 10px;
   border: none;
   font-size: 1rem;
-  margin: 5px;
+  margin: 20px;
 }
 button:hover {
-  font-size: 1.5rem;
-  margin: 0;
   background: linear-gradient(#fface8, #ae80e5);
 }
 
@@ -64,6 +68,7 @@ button:hover {
   display: flex;
   justify-content: space-around;
   padding: 0;
+  margin: 20px;
 }
 .functioning ol {
   list-style-type: none;
@@ -98,9 +103,6 @@ button:hover {
 .functioning li i {
   padding: 5px;
 }
-.functioning li i:hover {
-  color: #9356DC;
-}
 
 .container {
   background: #eeeded;
@@ -118,6 +120,7 @@ button:hover {
 }
 .container__restaurant-card {
   width: 45%;
+  margin: 25px;
 }
 .container__restaurant-card figure {
   background: #FFF;
@@ -155,6 +158,7 @@ footer a:hover, footer i:hover {
 footer h3 {
   color: #FFF;
   text-align: center;
+  font-size: 1.5rem;
 }
 footer ul {
   text-align: center;
@@ -172,19 +176,51 @@ footer li {
   border-radius: 30px;
 }
 
-.card {
+.container-menu {
   background: #eeeded;
   border-radius: 30px;
   position: relative;
-  margin: -80px 20px 0 20px;
+  margin: -80px 20px 20px 20px;
 }
-.card .title {
+
+.title {
   text-align: center;
   font-size: 1.5rem;
+}
+
+.card {
+  display: flex;
+  justify-content: space-around;
+}
+.card__menu {
+  width: 25%;
 }
 .card__menu h4, .card__menu .container__restaurant-card p, .container__restaurant-card .card__menu p {
   border-bottom: 2px solid #99E2D0;
   width: 40px;
+}
+
+.meal {
+  background: #FFF;
+  border-radius: 20px;
+  width: 100%;
+  margin: 35px 0;
+  padding: 10px;
+  position: relative;
+}
+.meal p {
+  font-size: 0.8rem;
+  padding-top: 10px;
+}
+.meal__price {
+  position: absolute;
+  right: 10px;
+  top: 15px;
+  font-weight: bold;
+}
+
+.order-button {
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
