--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,60 +1,45 @@
 @import "./Utils/variables";
 
-*
-{
+*{
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
     text-decoration: none;
     color: #000;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
 }
 
 header{
-    margin: 0 50px;
     position: relative;
     a{
         position: absolute;
-        font-size: 2.5rem;
-        top: 15px;
+        top: 10px;
+        left: 20px;
     }
 }
 
-main{
-    margin: 0 50px;
-}
-.logo, h3
-{
-    font-family: 'Shrikhand', cursive;
-}
-
-.logo, .search, .menu
-{
+.logo{
     text-align: center;
+    margin: 5px;
 }
 
-.search
-{
+.search{
     background: darken($color-background, 5);
-    padding: 10px;
-    border-radius: 20px 20px 0 0 ;
-}
-
-input[type="search"]
-{
-    border: none;
-    background: transparent;
+    text-align: center;
     font-weight: bold;
-    font-size: 1rem;
+    height: 35px;    
 }
 
-.menu
-{
+.menu{
     background: $color-background;
-    padding: 40px 0 20px 0;
-    border-radius: 0 0 20px 20px;
-    &__info
-    {
-        margin-top: 10px;
+    text-align: center;
+    padding: 20px;
+    h1{
+        font-size: 1.2rem;
+        padding: 20px 60px 10px;
     }
+}
+
+input[type="search"] {
+    border: none;
 }
 
 button
@@ -65,27 +50,20 @@ button
     border: none;
     font-size: 1rem;
     margin: 20px;
+    color: #FFF;
     &:hover{
         background: linear-gradient(lighten($color-secondary,10),lighten($color-primary, 10));
     }
 }
 
-
-.functioning
-{
-    &__title
-    {
-        text-align: center;
+.functioning{
+    &__title{
+        font-size: 1.5rem;
+        margin: 25px 0 15px 15px;
     }
-    &__list
-    {
-        display: flex;
-        justify-content: space-around;
+    &__list{
         padding: 0;
-        margin: 20px;
-    }
-    ol{
-        list-style-type: none;
+        margin: 12px;
     }
 }
 
@@ -93,9 +71,9 @@ button
 {
     counter-increment: li;
     background: $color-background;
-    width: 20%;
-    height: 50px;
-    border-radius: 20px;
+    height: 60px;
+    margin-bottom: 15px;
+    border-radius: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,7 +84,6 @@ button
         content: counter(li);
         background: $color-primary;
         width: 20px;
-        height: 20px;
         border-radius: 50%;
         text-align: center;
         padding: 5px;
@@ -126,122 +103,115 @@ button
 .container
 {
     background: $color-background;
-    border-radius: 20px;
+    padding-bottom: 30px;
 
     &__title{
-        text-align: center;
-        padding-top: 25px;
+        padding: 25px 0 0 15px;
     }
-    &__restaurant{
-           display: flex;
-           flex-wrap: wrap;
-           padding: 0 100px 50px 100px;
-           justify-content: space-around;
-           
-    }
-    &__restaurant-card{
-        width: 45%;
-        margin: 25px;
-
-        figure{
-            background: #FFF;
-            border-radius: 20px;
-            overflow: hidden;
-           
-        }
-        img{
+    img{
         width: 100%;
-        height: 250px;
+        height: 150px;
         object-fit: cover;
         }
-        figcaption{
-            position: relative;
-            h4{
-                margin: 0;
-                padding: 10px;
-                
+    figcaption{
+        position: relative;
+        h4{
+            margin: 0;
+            padding: 6px 0 5px 10px;
             }
         }
-        
         p{
             @extend h4
         }
         i{
             position: absolute;
             right: 20px;
-            top: 25px;
+            top: 15px;
             font-size: 30px;
         }
+
+    &__restaurant-card{
+        background: #fff;
+        margin: 15px;
+        border-radius: 15px;
+        overflow: hidden;
     }
 }
 
 footer{
-    background: #000;
+    background: darken($color: $color-background, $amount: 70);
+    padding-bottom: 30px;
+    
     a{
         color: #FFF;
         &:hover{
             color: $color-secondary ;
         }
     }
-    h3{
+    p{
         color: #FFF;
-        text-align: center;
+        padding: 20px 0 15px 15px;
+        font-family : 'Shrikhand', cursif ;
         font-size: 1.5rem;
     }
     ul{
-        text-align: center;
-        margin: 0;
-        padding-bottom: 30px;
+        padding-left: 15px;
         list-style-type: none;
     }
     li{
-        margin: 5px;
+        margin-top: 5px;
     }
     
     i{
         @extend a;
     }
 }
+
 .bg 
 {
     img{
-    height: 550px;
+    height: 250px;
     width: 100%;
     object-fit: cover;
-    border-radius: 30px;
     }
-    
 }
+
 
 .container-menu{
     background: $color-background;
-    border-radius: 30px;
+    border-radius: 30px 30px 0 0;
     position: relative;
-    margin: -80px 20px 20px 20px;
-}
-.title{
-    text-align: center;
-    font-size: 1.5rem;
+    margin-top: -50px;
+
+    .title{
+        padding: 10px 0 20px 20px;
+        font-size: 1.2rem;
+        position: relative;
+    
+        h3{
+            font-family : 'Shrikhand', cursif;
+        }
+        i{
+            position: absolute;
+            right: 20px;
+            top: 16px;
+        }
+    }
 }
 
 .card{
-    display: flex;
-    justify-content: space-around;
-    
-    &__menu{
-        width: 25%;
-    }
-
+    padding: 10px;
     &__menu h4 {
         border-bottom: 2px solid $color-tertiary;
         width: 40px;
     }
 }
+
 .meal{
     background: #FFF;
-    border-radius: 20px;
-    width: 100%;
-    margin: 35px 0;
+    border-radius: 15px;
+    width: 95%;
+    margin: 15px 0;
     padding: 10px;
     position: relative;
     
