--- a/style.css
+++ b/style.css
@@ -1,52 +1,43 @@
 * {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
   text-decoration: none;
   color: #000;
-  font-family: "Roboto", sans-serif;
-  margin: 0;
 }
 
 header {
-  margin: 0 50px;
   position: relative;
 }
 header a, header footer i, footer header i {
   position: absolute;
-  font-size: 2.5rem;
-  top: 15px;
+  top: 10px;
+  left: 20px;
 }
 
-main {
-  margin: 0 50px;
-}
-
-.logo, h3 {
-  font-family: "Shrikhand", cursive;
-}
-
-.logo, .search, .menu {
+.logo {
   text-align: center;
+  margin: 5px;
 }
 
 .search {
   background: #e2e0e0;
-  padding: 10px;
-  border-radius: 20px 20px 0 0;
-}
-
-input[type=search] {
-  border: none;
-  background: transparent;
+  text-align: center;
   font-weight: bold;
-  font-size: 1rem;
+  height: 35px;
 }
 
 .menu {
   background: #eeeded;
-  padding: 40px 0 20px 0;
-  border-radius: 0 0 20px 20px;
+  text-align: center;
+  padding: 20px;
 }
-.menu__info {
-  margin-top: 10px;
+.menu h1 {
+  font-size: 1.2rem;
+  padding: 20px 60px 10px;
+}
+
+input[type=search] {
+  border: none;
 }
 
 button {
@@ -56,30 +47,27 @@ button {
   border: none;
   font-size: 1rem;
   margin: 20px;
+  color: #FFF;
 }
 button:hover {
   background: linear-gradient(#fface8, #ae80e5);
 }
 
 .functioning__title {
-  text-align: center;
+  font-size: 1.5rem;
+  margin: 25px 0 15px 15px;
 }
 .functioning__list {
-  display: flex;
-  justify-content: space-around;
   padding: 0;
-  margin: 20px;
-}
-.functioning ol {
-  list-style-type: none;
+  margin: 12px;
 }
 
 .functioning li {
   counter-increment: li;
   background: #eeeded;
-  width: 20%;
-  height: 50px;
-  border-radius: 20px;
+  height: 60px;
+  margin-bottom: 15px;
+  border-radius: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,7 +78,6 @@ button:hover {
   content: counter(li);
   background: #9356DC;
   width: 20px;
-  height: 20px;
   border-radius: 50%;
   text-align: center;
   padding: 5px;
@@ -106,48 +93,39 @@ button:hover {
 
 .container {
   background: #eeeded;
-  border-radius: 20px;
+  padding-bottom: 30px;
 }
 .container__title {
-  text-align: center;
-  padding-top: 25px;
+  padding: 25px 0 0 15px;
 }
-.container__restaurant {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 100px 50px 100px;
-  justify-content: space-around;
-}
-.container__restaurant-card {
-  width: 45%;
-  margin: 25px;
-}
-.container__restaurant-card figure {
-  background: #FFF;
-  border-radius: 20px;
-  overflow: hidden;
-}
-.container__restaurant-card img {
+.container img {
   width: 100%;
-  height: 250px;
+  height: 150px;
   object-fit: cover;
 }
-.container__restaurant-card figcaption {
+.container figcaption {
   position: relative;
 }
-.container__restaurant-card figcaption h4, .container__restaurant-card figcaption p {
+.container figcaption h4, .container figcaption p {
   margin: 0;
-  padding: 10px;
+  padding: 6px 0 5px 10px;
 }
-.container__restaurant-card i {
+.container i {
   position: absolute;
   right: 20px;
-  top: 25px;
+  top: 15px;
   font-size: 30px;
+}
+.container__restaurant-card {
+  background: #fff;
+  margin: 15px;
+  border-radius: 15px;
+  overflow: hidden;
 }
 
 footer {
-  background: #000;
+  background: #3d3939;
+  padding-bottom: 30px;
 }
 footer a, footer i {
   color: #FFF;
@@ -155,56 +133,58 @@ footer a, footer i {
 footer a:hover, footer i:hover {
   color: #FF79DA;
 }
-footer h3 {
+footer p {
   color: #FFF;
-  text-align: center;
+  padding: 20px 0 15px 15px;
+  font-family: "Shrikhand", cursif;
   font-size: 1.5rem;
 }
 footer ul {
-  text-align: center;
-  margin: 0;
-  padding-bottom: 30px;
+  padding-left: 15px;
   list-style-type: none;
 }
 footer li {
-  margin: 5px;
+  margin-top: 5px;
 }
 .bg img {
-  height: 550px;
+  height: 250px;
   width: 100%;
   object-fit: cover;
-  border-radius: 30px;
 }
 
 .container-menu {
   background: #eeeded;
-  border-radius: 30px;
+  border-radius: 30px 30px 0 0;
   position: relative;
-  margin: -80px 20px 20px 20px;
+  margin-top: -50px;
 }
-
-.title {
-  text-align: center;
-  font-size: 1.5rem;
+.container-menu .title {
+  padding: 10px 0 20px 20px;
+  font-size: 1.2rem;
+  position: relative;
+}
+.container-menu .title h3 {
+  font-family: "Shrikhand", cursif;
+}
+.container-menu .title i {
+  position: absolute;
+  right: 20px;
+  top: 16px;
 }
 
 .card {
-  display: flex;
-  justify-content: space-around;
+  padding: 10px;
 }
-.card__menu {
-  width: 25%;
-}
-.card__menu h4, .card__menu .container__restaurant-card p, .container__restaurant-card .card__menu p {
+.card__menu h4, .card__menu .container p, .container .card__menu p {
   border-bottom: 2px solid #99E2D0;
   width: 40px;
 }
 
 .meal {
   background: #FFF;
-  border-radius: 20px;
-  width: 100%;
-  margin: 35px 0;
+  border-radius: 15px;
+  width: 95%;
+  margin: 15px 0;
   padding: 10px;
   position: relative;
 }
