--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,7 +25,8 @@ header{
     background: darken($color-background, 5);
     text-align: center;
     font-weight: bold;
-    height: 35px;    
+    height: 35px; 
+    border-top: 2px solid darken($color-background, 10);   
 }
 
 .menu{
@@ -51,6 +52,7 @@ button
     font-size: 1rem;
     margin: 20px;
     color: #FFF;
+    box-shadow: 4px 4px 10px #b8b7b7;
     &:hover{
         background: linear-gradient(lighten($color-secondary,10),lighten($color-primary, 10));
     }
@@ -112,7 +114,18 @@ button
         width: 100%;
         height: 150px;
         object-fit: cover;
+        
         }
+    .new{
+        background: $color-tertiary;
+        width: 80px;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        text-align: center;
+        color: darken($color-tertiary, 40);
+        font-weight: bold;
+    }
     figcaption{
         position: relative;
         h4{
@@ -123,11 +136,22 @@ button
         p{
             @extend h4
         }
-        i{
+        .heart{
             position: absolute;
             right: 20px;
             top: 15px;
             font-size: 30px;
+            i{         
+                transition: all 0.2s ease-in-out;
+        
+                &:hover{
+                    background:-webkit-linear-gradient($color-secondary, $color-primary);
+                    -webkit-background-clip:text;
+                    color:transparent;
+                    font-weight: 600;
+                    
+                }
+            }
         }
 
     &__restaurant-card{
@@ -135,6 +159,7 @@ button
         margin: 15px;
         border-radius: 15px;
         overflow: hidden;
+        position: relative;
     }
 }
 
@@ -210,22 +235,56 @@ footer{
 .meal{
     background: #FFF;
     border-radius: 15px;
-    width: 95%;
     margin: 15px 0;
-    padding: 10px;
-    position: relative;
+    overflow: hidden;
+    display: flex;
+    cursor: pointer;
+    box-shadow: 4px 4px 16px #b8b7b7;
     
+    &__info{
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        align-items: center;
+        &__text{
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
+    }
     p{
         font-size: 0.8rem;
-        padding-top: 10px;
     }
     &__price{
-        position: absolute;
-        right: 10px;
-        top: 15px;
         font-weight: bold;
     }
 }
+
+.check{
+    display: flex;
+    background: $color-tertiary;
+    width: 70px;
+    align-items: center;
+    justify-content: center;
+    margin-right: -70px;
+    transition: 0.5s;
+    
+    i{
+        color: #FFF;
+        transform: rotate(360deg);
+        transition: 0.7s;
+    }
+}
+
+.meal:hover .check{
+    margin-right: 0;
+}
+.meal:hover i{
+    transform: rotate(0deg);
+}
+
 .order-button{
     text-align: center;
 }
+
