--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,13 +1,79 @@
 @import "./Utils/variables";
 
-*{
+body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    text-decoration: none;
-    color: #000;
 }
 
-header{
+
+.loading{
+    z-index: 1;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: hsl(0deg 0% 100% / 90%);
+    animation: loader 2s both;
+    
+
+
+    &__spinner{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;  
+        border-right: 8px solid $color-primary;
+        border-left: 8px solid $color-secondary;
+        animation: spin 1s linear infinite;
+    
+        
+        
+    }
+
+    &__spinner2{
+        width: 30px;
+        height: 30px;
+        border-radius: 50%; 
+        border-right: 6px solid $color-tertiary;
+        border-left: 6px solid $color-tertiary;
+        animation: spin-reverse 0.5s linear infinite;
+        
+    }
+    
+}
+
+@keyframes spin {
+    0% { 
+        transform: rotate(0deg); 
+    }
+    100% { 
+        transform: rotate(360deg); 
+    }
+}
+
+@keyframes spin-reverse {
+    0% { 
+        transform: rotate(360deg); 
+    }
+    100% { 
+        transform: rotate(0deg); 
+    }
+}
+
+@keyframes loader {
+    
+    80% {
+        opacity: 1;
+        z-index: 1;
+    }
+    100% {
+        opacity: 0;
+        z-index: -2;
+    }
+}
+
+header {
     position: relative;
     a{
         position: absolute;
@@ -16,12 +82,12 @@ header{
     }
 }
 
-.logo{
+.logo {
     text-align: center;
     margin: 5px;
 }
 
-.search{
+.search {
     background: darken($color-background, 5);
     text-align: center;
     font-weight: bold;
@@ -29,11 +95,11 @@ header{
     border-top: 2px solid darken($color-background, 10);   
 }
 
-.menu{
+.menu {
     background: $color-background;
     text-align: center;
     padding: 20px;
-    h1{
+    h1 {
         font-size: 1.2rem;
         padding: 20px 60px 10px;
     }
@@ -41,10 +107,16 @@ header{
 
 input[type="search"] {
     border: none;
+    background: darken($color-background, 5)
 }
 
-button
-{
+
+a {
+    color: #000;
+    text-decoration: none;
+}
+
+button {
     background: linear-gradient($color-secondary, $color-primary);
     border-radius: 20px;
     padding: 10px;
@@ -53,25 +125,24 @@ button
     margin: 20px;
     color: #FFF;
     box-shadow: 4px 4px 10px #b8b7b7;
-    &:hover{
+    &:hover {
         background: linear-gradient(lighten($color-secondary,10),lighten($color-primary, 10));
     }
 }
 
-.functioning{
-    &__title{
+.functioning {
+    &__title {
         font-size: 1.5rem;
         margin: 25px 0 15px 15px;
     }
-    &__list{
+    &__list {
         padding: 0;
         margin: 12px;
     }
 }
 
-.functioning li
-{
-    counter-increment: li;
+.functioning li {
+    
     background: $color-background;
     height: 60px;
     margin-bottom: 15px;
@@ -81,40 +152,47 @@ button
     align-items: center;
     font-weight: bold;
     position: relative;
-    &::before
-    {
-        content: counter(li);
-        background: $color-primary;
-        width: 20px;
-        border-radius: 50%;
-        text-align: center;
-        padding: 5px;
-        position: absolute;
-        left: -10px;
-    }
-    &:hover{
+    &:hover {
         background: lighten($color-primary, 35);
         }
-    i 
-    {
+    i {
         padding: 5px;
+        &:hover{
+            color: $color-primary;
+        }
         
     }
 }
 
-.container{
+.number{
+        
+    background: $color-primary;
+    width: 20px;
+    border-radius: 50%;
+    text-align: center;
+    padding: 5px;
+    position: absolute;
+    left: -10px;
+
+}
+
+
+.container {
     background: $color-background;
-    padding-bottom: 30px;
-    &__title{
+    padding-bottom: 50px;
+    &__title {
         padding: 25px 0 0 15px;
     }
-    img{
+    figure {
+        margin: 0;
+    }
+    img {
         width: 100%;
         height: 150px;
         object-fit: cover;
         
     }
-    .new{
+    .new {
         background: $color-tertiary;
         width: 80px;
         position: absolute;
@@ -124,18 +202,18 @@ button
         color: darken($color-tertiary, 40);
         font-weight: bold;
     }
-    figcaption{
+    figcaption {
         position: relative;
-        h4{
+        h4 {
             margin: 0;
             padding: 6px 0 5px 10px;
             }
-        p{
+        p {
             @extend h4
         }
     }
     &__restaurant-card {
-        background: #fff;
+        background-color: #FFF;
         margin: 15px;
         border-radius: 15px;
         overflow: hidden;
@@ -144,68 +222,68 @@ button
 }     
         
 
-.heart{
+.heart {
     position: absolute;
     right: 20px;
     top: 15px;
     font-size: 30px;
-    i{         
-    transition: all 0.2s ease-in-out;
-        &:hover{
-        background:-webkit-linear-gradient($color-secondary, $color-primary);
-        -webkit-background-clip:text;
-        color:transparent;
-        font-weight: 600;
-        animation-name: animheart;
-        animation-duration: 2s;
+    color: #FFF;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    &:hover {
+            color: $color-primary;
+            background: linear-gradient($color-secondary, $color-primary);
+            text-shadow: none;
+            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text;
+            animation: animheart 3s linear;
+
         }
-    }
 }
 
  @keyframes animheart {
-         0%{
+         0% {
              opacity: 0;
-         }
+        }
 
-         100%{
+         100% {
              opacity: 100%;
-         }
+        }
  }       
     
 
 
-footer{
+footer {
     background: darken($color: $color-background, $amount: 70);
     padding-bottom: 30px;
     
-    a{
+    a {
         color: #FFF;
         &:hover{
             color: $color-secondary ;
         }
     }
-    p{
+    p {
         color: #FFF;
         padding: 20px 0 15px 15px;
         font-family : 'Shrikhand', cursif ;
         font-size: 1.5rem;
+        margin: 0;
     }
-    ul{
+    ul {
         padding-left: 15px;
         list-style-type: none;
     }
-    li{
+    li {
         margin-top: 5px;
     }
     
-    i{
+    i {
         @extend a;
     }
 }
 
-.bg 
-{
-    img{
+.bg {
+    img {
     height: 250px;
     width: 100%;
     object-fit: cover;
@@ -213,29 +291,40 @@ footer{
 }
 
 
-.container-menu{
+.container-menu {
     background: $color-background;
     border-radius: 30px 30px 0 0;
     position: relative;
     margin-top: -50px;
 
-    .title{
+    .title {
         padding: 10px 0 20px 20px;
         font-size: 1.2rem;
         position: relative;
     
-        h3{
+        h3 {
             font-family : 'Shrikhand', cursif;
         }
-        i{
+        i {
             position: absolute;
             right: 20px;
-            top: 16px;
+            top: 35px;
+            color: $color-background;
+            text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+            &:hover {
+                color: $color-primary;
+                background: linear-gradient($color-secondary, $color-primary);
+                text-shadow: none;
+                -webkit-text-fill-color: transparent;
+                -webkit-background-clip: text;
+                animation: animheart 2.5s linear;
+    
+            }
         }
     }
 }
 
-.card{
+.card {
     padding: 10px;
     &__menu h4 {
         border-bottom: 2px solid $color-tertiary;
@@ -243,7 +332,7 @@ footer{
     }
 }
 
-.meal{
+.meal {
     background: #FFF;
     border-radius: 15px;
     margin: 15px 0;
@@ -252,27 +341,31 @@ footer{
     cursor: pointer;
     box-shadow: 4px 4px 16px #b8b7b7;
     
-    &__info{
+    &__info {
         padding: 10px;
         display: flex;
         justify-content: space-between;
         width: 100%;
         align-items: center;
-        &__text{
+        &__text {
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
         }
     }
-    p{
-        font-size: 0.8rem;
+    h5 {
+        margin: 0;
     }
-    &__price{
+    p {
+        font-size: 0.8rem;
+        margin: 0;
+    }
+    &__price {
         font-weight: bold;
     }
 }
 
-.check{
+.check {
     display: flex;
     background: $color-tertiary;
     width: 70px;
@@ -281,21 +374,21 @@ footer{
     margin-right: -70px;
     transition: 0.5s;
     
-    i{
+    i {
         color: #FFF;
         transform: rotate(360deg);
         transition: 0.7s;
     }
 }
 
-.meal:hover .check{
+.meal:hover .check {
     margin-right: 0;
 }
-.meal:hover i{
+.meal:hover i {
     transform: rotate(0deg);
 }
 
-.order-button{
+.order-button {
     text-align: center;
 }
 
