--- a/style.css
+++ b/style.css
@@ -1,10 +1,62 @@
-* {
+body {
   margin: 0;
   font-family: "Roboto", sans-serif;
-  text-decoration: none;
-  color: #000;
 }
 
+.loading {
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.9);
+  animation: loader 2s both;
+}
+.loading__spinner {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border-right: 8px solid #9356DC;
+  border-left: 8px solid #FF79DA;
+  animation: spin 1s linear infinite;
+}
+.loading__spinner2 {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border-right: 6px solid #99E2D0;
+  border-left: 6px solid #99E2D0;
+  animation: spin-reverse 0.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes spin-reverse {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes loader {
+  80% {
+    opacity: 1;
+    z-index: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -2;
+  }
+}
 header {
   position: relative;
 }
@@ -20,15 +72,15 @@ header a, header footer i, footer header i {
 }
 
 .search {
-  background: #e2e0e0;
+  background: rgba(226, 226, 226, 0.6117647059);
   text-align: center;
   font-weight: bold;
   height: 35px;
-  border-top: 2px solid #d5d3d3;
+  border-top: 2px solid rgba(214, 214, 214, 0.6117647059);
 }
 
 .menu {
-  background: #eeeded;
+  background: #efefef9c;
   text-align: center;
   padding: 20px;
 }
@@ -39,6 +91,12 @@ header a, header footer i, footer header i {
 
 input[type=search] {
   border: none;
+  background: rgba(226, 226, 226, 0.6117647059);
+}
+
+a, footer i {
+  color: #000;
+  text-decoration: none;
 }
 
 button {
@@ -65,8 +123,7 @@ button:hover {
 }
 
 .functioning li {
-  counter-increment: li;
-  background: #eeeded;
+  background: #efefef9c;
   height: 60px;
   margin-bottom: 15px;
   border-radius: 15px;
@@ -76,8 +133,17 @@ button:hover {
   font-weight: bold;
   position: relative;
 }
-.functioning li::before {
-  content: counter(li);
+.functioning li:hover {
+  background: #f2eafb;
+}
+.functioning li i {
+  padding: 5px;
+}
+.functioning li i:hover {
+  color: #9356DC;
+}
+
+.number {
   background: #9356DC;
   width: 20px;
   border-radius: 50%;
@@ -86,19 +152,16 @@ button:hover {
   position: absolute;
   left: -10px;
 }
-.functioning li:hover {
-  background: #f2eafb;
-}
-.functioning li i {
-  padding: 5px;
-}
 
 .container {
-  background: #eeeded;
-  padding-bottom: 30px;
+  background: #efefef9c;
+  padding-bottom: 50px;
 }
 .container__title {
   padding: 25px 0 0 15px;
+}
+.container figure {
+  margin: 0;
 }
 .container img {
   width: 100%;
@@ -123,7 +186,7 @@ button:hover {
   padding: 6px 0 5px 10px;
 }
 .container__restaurant-card {
-  background: #fff;
+  background-color: #FFF;
   margin: 15px;
   border-radius: 15px;
   overflow: hidden;
@@ -135,17 +198,16 @@ button:hover {
   right: 20px;
   top: 15px;
   font-size: 30px;
+  color: #FFF;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-.heart i {
-  transition: all 0.2s ease-in-out;
-}
-.heart i:hover {
-  background: -webkit-linear-gradient(#FF79DA, #9356DC);
+.heart:hover {
+  color: #9356DC;
+  background: linear-gradient(#FF79DA, #9356DC);
+  text-shadow: none;
+  -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  color: transparent;
-  font-weight: 600;
-  animation-name: animheart;
-  animation-duration: 2s;
+  animation: animheart 3s linear;
 }
 
 @keyframes animheart {
@@ -157,7 +219,7 @@ button:hover {
   }
 }
 footer {
-  background: #3d3939;
+  background: rgba(61, 61, 61, 0.6117647059);
   padding-bottom: 30px;
 }
 footer a, footer i {
@@ -171,6 +233,7 @@ footer p {
   padding: 20px 0 15px 15px;
   font-family: "Shrikhand", cursif;
   font-size: 1.5rem;
+  margin: 0;
 }
 footer ul {
   padding-left: 15px;
@@ -186,7 +249,7 @@ footer li {
 }
 
 .container-menu {
-  background: #eeeded;
+  background: #efefef9c;
   border-radius: 30px 30px 0 0;
   position: relative;
   margin-top: -50px;
@@ -202,7 +265,17 @@ footer li {
 .container-menu .title i {
   position: absolute;
   right: 20px;
-  top: 16px;
+  top: 35px;
+  color: #efefef9c;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+.container-menu .title i:hover {
+  color: #9356DC;
+  background: linear-gradient(#FF79DA, #9356DC);
+  text-shadow: none;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  animation: animheart 2.5s linear;
 }
 
 .card {
@@ -234,8 +307,12 @@ footer li {
   text-overflow: ellipsis;
   overflow: hidden;
 }
+.meal h5 {
+  margin: 0;
+}
 .meal p {
   font-size: 0.8rem;
+  margin: 0;
 }
 .meal__price {
   font-weight: bold;
