--- a/sass/Utils/_mixins.scss
+++ b/sass/Utils/_mixins.scss
@@ -1,15 +1,10 @@
-@mixin for-phone-only {
-    @media (max-width: 599px) {
-      @content;
-    }
-  }
-  @mixin for-tablet-up {
+  @mixin tablet {
     @media (min-width: 600px) and (max-width: 1199px) {
       @content;
     }
   }
   
-  @mixin for-desktop-up {
+  @mixin desktop {
     @media (min-width: 1200px) {
       @content;
     }
