--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -1,4 +1,4 @@
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
-$color-background :#efefef9c;
+$color-background :#f6f6f6;
