--- a/sass/style.scss
+++ b/sass/style.scss
@@ -127,6 +127,7 @@ button {
     box-shadow: 4px 4px 10px #b8b7b7;
     &:hover {
         background: linear-gradient(lighten($color-secondary,10),lighten($color-primary, 10));
+        box-shadow: 5px 5px 4px #b8b7b7;
     }
 }
 
@@ -240,11 +241,16 @@ button {
         border-radius: 15px;
         overflow: hidden;
         position: relative;
+                      
+
         @include tablet {
             width: 40%;
         }
         @include desktop {
             width: 40%;
+            &:hover {
+                width: 42%;
+            }
         }
     }
 }     
