--- a/sass/style.scss
+++ b/sass/style.scss
@@ -248,10 +248,7 @@ button {
         }
         @include desktop {
             width: 40%;
-            &:hover {
-                width: 42%;
             }
-        }
     }
 }     
         
@@ -433,29 +430,29 @@ footer {
 .anim1{
     animation-duration: 1.5s;
     animation-delay: 0.2s;
-    animation-name: glissement;
+    animation-name: sliding;
 }
 
 .anim2{
     animation-duration: 1.5s;
     animation-delay: 0.4s;
-    animation-name: glissement;
+    animation-name: sliding;
 }
 
 .anim3{
     animation-duration: 1.5s;
     animation-delay: 0.6s;
-    animation-name: glissement;
+    animation-name: sliding;
 }
 
 .anim4{
     animation-duration: 1.5s;
     animation-delay: 0.8s;
-    animation-name: glissement;
+    animation-name: sliding;
 }
 
 
-@keyframes glissement {
+@keyframes sliding {
     from {
         width: 0%;   
     }
