--- a/style.css
+++ b/style.css
@@ -231,9 +231,6 @@ button:hover {
   .container__restaurant-card {
     width: 40%;
   }
-  .container__restaurant-card:hover {
-    width: 42%;
-  }
 }
 
 .heart {
@@ -398,28 +395,28 @@ footer li {
 .anim1 {
   animation-duration: 1.5s;
   animation-delay: 0.2s;
-  animation-name: glissement;
+  animation-name: sliding;
 }
 
 .anim2 {
   animation-duration: 1.5s;
   animation-delay: 0.4s;
-  animation-name: glissement;
+  animation-name: sliding;
 }
 
 .anim3 {
   animation-duration: 1.5s;
   animation-delay: 0.6s;
-  animation-name: glissement;
+  animation-name: sliding;
 }
 
 .anim4 {
   animation-duration: 1.5s;
   animation-delay: 0.8s;
-  animation-name: glissement;
+  animation-name: sliding;
 }
 
-@keyframes glissement {
+@keyframes sliding {
   from {
     width: 0%;
   }
