--- a/sass/Utils/_mixins.scss
+++ b/sass/Utils/_mixins.scss
@@ -9,3 +9,18 @@
       @content;
     }
   }
+
+  @mixin button {
+    background: linear-gradient($color-secondary, $color-primary);
+    border-radius: 25px;
+    padding: 15px 30px;
+    border: none;
+    font-size: 0.9rem;
+    margin: 20px;
+    color: #FFF;
+    box-shadow: 4px 4px 10px #b8b7b7;
+    &:hover {
+        background: linear-gradient(lighten($color-secondary,10),lighten($color-primary, 10));
+        box-shadow: 5px 5px 4px #b8b7b7;
+    }
+  }
