--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+a, footer .fas {
+  color: black;
+  text-decoration: none;
+}
+
 .loading {
   z-index: 1;
   position: fixed;
@@ -60,7 +65,7 @@ body {
 header {
   position: relative;
 }
-header a, header footer i, footer header i {
+header a, header footer .fas, footer header .fas {
   position: absolute;
   top: 15px;
   left: 20px;
@@ -93,17 +98,12 @@ input[type=search] {
   border: none;
 }
 
-a, footer i {
-  color: #000;
-  text-decoration: none;
-}
-
 button {
   background: linear-gradient(#FF79DA, #9356DC);
-  border-radius: 20px;
-  padding: 10px;
+  border-radius: 25px;
+  padding: 15px 30px;
   border: none;
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin: 20px;
   color: #FFF;
   box-shadow: 4px 4px 10px #b8b7b7;
@@ -135,7 +135,6 @@ button:hover {
   border-radius: 15px;
   display: flex;
   justify-content: center;
-  align-items: center;
   font-weight: bold;
   position: relative;
 }
@@ -144,13 +143,16 @@ button:hover {
     width: 30%;
   }
 }
+.functioning li .fas {
+  align-self: center;
+}
+.functioning li p {
+  margin: 20px;
+}
 .functioning li:hover {
   background: #f2eafb;
 }
-.functioning li i {
-  padding: 5px;
-}
-.functioning li i:hover {
+.functioning li:hover .fas {
   color: #9356DC;
 }
 
@@ -162,6 +164,12 @@ button:hover {
   padding: 5px;
   position: absolute;
   left: -10px;
+  top: 15px;
+  color: #FFF;
+}
+
+.function {
+  display: flex;
 }
 
 .container {
@@ -193,6 +201,7 @@ button:hover {
   text-align: center;
   color: #278870;
   font-weight: bold;
+  padding: 6px;
 }
 .container figcaption {
   position: relative;
@@ -236,10 +245,11 @@ button:hover {
 .heart {
   position: absolute;
   right: 20px;
-  top: 15px;
-  font-size: 30px;
+  bottom: 20px;
+  font-size: 25px;
   color: #FFF;
   text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2.5px black;
+  cursor: pointer;
 }
 .heart:hover {
   color: #9356DC;
@@ -262,18 +272,19 @@ footer {
   background: #444444;
   padding-bottom: 30px;
 }
-footer a, footer i {
+footer a, footer .fas {
   color: #FFF;
 }
-footer a:hover, footer i:hover {
+footer a:hover, footer .fas:hover {
   color: #FF79DA;
 }
-footer p {
+footer h5 {
   color: #FFF;
   padding: 20px 0 15px 15px;
   font-family: "Shrikhand", cursif;
   font-size: 1.5rem;
   margin: 0;
+  font-weight: 500;
 }
 footer ul {
   padding-left: 15px;
@@ -282,6 +293,11 @@ footer ul {
 footer li {
   margin-top: 5px;
 }
+footer .fas {
+  margin-right: 3px;
+  width: 1.3rem;
+}
+
 .logo {
   font-family: "Shrikhand", cursif;
 }
@@ -311,22 +327,23 @@ footer li {
   }
 }
 .container-menu .title {
-  padding: 10px 0 20px 20px;
+  padding: 10px 0 0 20px;
   font-size: 1.2rem;
   position: relative;
 }
 .container-menu .title h2 {
   font-family: "Shrikhand", cursif;
 }
-.container-menu .title i {
+.container-menu .title .fas {
   position: absolute;
   font-size: 1.5rem;
   right: 30px;
   top: 42px;
+  cursor: pointer;
   color: #f6f6f6;
   text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2.5px black;
 }
-.container-menu .title i:hover {
+.container-menu .title .fas:hover {
   color: #9356DC;
   background: linear-gradient(#FF79DA, #9356DC);
   text-shadow: none;
@@ -352,6 +369,7 @@ footer li {
 .card__menu h3 {
   border-bottom: 2px solid #99E2D0;
   width: 40px;
+  font-weight: normal;
 }
 
 .meal {
@@ -362,13 +380,11 @@ footer li {
   display: flex;
   cursor: pointer;
   box-shadow: 4px 4px 16px #b8b7b7;
+  animation: slide 1.5s linear both;
 }
 .meal__info {
   padding: 10px;
-  display: flex;
-  justify-content: space-between;
   width: 100%;
-  align-items: center;
   white-space: nowrap;
   overflow: hidden;
 }
@@ -382,46 +398,45 @@ footer li {
   text-overflow: ellipsis;
 }
 .meal__info__desc {
-  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.meal__desc {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 .meal__price {
   font-weight: bold;
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
-.anim1 {
-  animation-duration: 1.5s;
-  animation-delay: 0.2s;
-  animation-name: sliding;
-}
-
-.anim2 {
-  animation-duration: 1.5s;
+.slide-delay1 {
   animation-delay: 0.4s;
-  animation-name: sliding;
 }
 
-.anim3 {
-  animation-duration: 1.5s;
-  animation-delay: 0.6s;
-  animation-name: sliding;
-}
-
-.anim4 {
-  animation-duration: 1.5s;
+.slide-delay2 {
   animation-delay: 0.8s;
-  animation-name: sliding;
 }
 
-@keyframes sliding {
-  from {
-    width: 0%;
+.slide-delay3 {
+  animation-delay: 1.2s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(1000px);
+    opacity: 0;
   }
-  to {
-    width: 100%;
+  80% {
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
 .check {
