--- a/sass/Utils/_mixins.scss
+++ b/sass/Utils/_mixins.scss
@@ -1,5 +1,5 @@
   @mixin tablet {
-    @media (min-width: 600px) and (max-width: 1199px) {
+    @media (min-width: 600px)  {
       @content;
     }
   }
@@ -13,7 +13,7 @@
   @mixin button {
     background: linear-gradient($color-secondary, $color-primary);
     border-radius: 25px;
-    padding: 15px 30px;
+    padding: 15px 25px;
     border: none;
     font-size: 0.9rem;
     margin: 20px;
@@ -24,3 +24,5 @@
         box-shadow: 5px 5px 4px #b8b7b7;
     }
   }
+
+  // and (max-width: 1199px)
