--- a/sass/style.scss
+++ b/sass/style.scss
@@ -106,7 +106,11 @@ header {
     padding: 20px;
     h1 {
         font-size: 1.2rem;
-        padding: 20px 60px 10px;
+        padding: 10px 60px 10px;
+        margin: 0;
+    }
+    &__info {
+        margin: 0;
     }
 }
 
@@ -120,8 +124,12 @@ button {
 
 .functioning {
     &__title {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         margin: 25px 0 15px 15px;
+        @include tablet {
+            text-align: center;
+            margin: 35px 0;
+        }
     }
     &__list {
         padding: 0;
@@ -139,19 +147,26 @@ button {
     height: 60px;
     margin-bottom: 15px;
     border-radius: 15px;
-    display: flex;
-    justify-content: center;
+    list-style-type: none;
     font-weight: bold;
     position: relative;
     @include desktop {
         width: 30%;
     }
     .fas {
-        align-self: center
-        ;
+        padding: 20px 40px 20px 60px;
+        @include tablet {
+            padding: 20px;
+        }
     }
     p {
-        margin: 20px;
+        font-size: 0.8rem;
+        display: flex;
+        align-items: center;
+        @include tablet {
+            font-size: 1rem;
+        }
+
     }
     &:hover {
         background: lighten($color-primary, 35);
@@ -174,6 +189,9 @@ button {
 
 .function {
     display: flex;
+    @include tablet {
+        justify-content: center;
+    }
     
 }
 
@@ -182,6 +200,9 @@ button {
     padding-bottom: 50px;
     &__title {
         padding: 25px 0 0 15px;
+        @include tablet {
+            text-align: center;
+        }
     }
     figure {
         margin: 0;
@@ -234,14 +255,9 @@ button {
         border-radius: 15px;
         overflow: hidden;
         position: relative;
-                      
-
         @include tablet {
             width: 40%;
         }
-        @include desktop {
-            width: 40%;
-            }
     }
 }     
         
@@ -345,12 +361,14 @@ footer {
     
         h2 {
             font-family : 'Shrikhand', cursif;
+            font-weight: 500;
+            font-size: 1.5rem;
         }
         .fas {
             position: absolute;
             font-size: 1.5rem;
             right: 30px;
-            top: 42px;
+            top: 31px;
             cursor: pointer;
             color: $color-background;
             text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2.5px black;
@@ -409,6 +427,7 @@ footer {
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            font-size: 1.1rem;
         }
         &__desc {
             display: flex;
@@ -416,18 +435,21 @@ footer {
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            font-size: 0.9rem;
         }
     }
     &__desc {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        margin: 10px 0 0 0;
     }  
     
     
     &__price {
         font-weight: bold;
         padding-left: 10px;
+        margin: 10px 0 0 0;
     }
 }
 .slide-delay1 {
@@ -479,5 +501,6 @@ footer {
 
 .order-button {
     text-align: center;
+    padding: 15px 35px;
 }
 
