--- a/style.css
+++ b/style.css
@@ -64,10 +64,13 @@ a, footer .fas {
 }
 header {
   position: relative;
+  width: 100%;
+  height: 40px;
+  justify-content: center;
 }
-header a, header footer .fas, footer header .fas {
+header .fas {
   position: absolute;
-  top: 15px;
+  top: 10px;
   left: 20px;
 }
 
@@ -82,6 +85,7 @@ header a, header footer .fas, footer header .fas {
   font-weight: bold;
   height: 35px;
   border-top: 2px solid #dddddd;
+  color: #363535;
 }
 
 .menu {
@@ -111,6 +115,7 @@ button {
   margin: 20px;
   color: #FFF;
   box-shadow: 4px 4px 10px #b8b7b7;
+  cursor: pointer;
 }
 button:hover {
   background: linear-gradient(#fface8, #ae80e5);
@@ -129,7 +134,8 @@ button:hover {
 }
 .functioning__list {
   padding: 0;
-  margin: 12px;
+  width: 85%;
+  margin: auto;
 }
 @media (min-width: 1200px) {
   .functioning__list {
@@ -142,7 +148,7 @@ button:hover {
   background: #f6f6f6;
   height: 60px;
   margin-bottom: 15px;
-  border-radius: 15px;
+  border-radius: 20px;
   list-style-type: none;
   font-weight: bold;
   position: relative;
@@ -183,11 +189,12 @@ button:hover {
   width: 20px;
   border-radius: 50%;
   text-align: center;
-  padding: 5px;
+  padding: 3px;
   position: absolute;
   left: -10px;
   top: 15px;
   color: #FFF;
+  font-weight: normal;
 }
 
 .function {
@@ -262,6 +269,7 @@ button:hover {
   border-radius: 15px;
   overflow: hidden;
   position: relative;
+  box-shadow: 4px 4px 16px #b8b7b7;
 }
 @media (min-width: 600px) {
   .container__restaurant-card {
@@ -273,7 +281,7 @@ button:hover {
   position: absolute;
   right: 20px;
   bottom: 20px;
-  font-size: 25px;
+  font-size: 20px;
   color: #FFF;
   text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2.5px black;
   cursor: pointer;
@@ -302,6 +310,9 @@ footer {
 footer a, footer .fas {
   color: #FFF;
 }
+footer a:hover .fas, footer .fas:hover .fas {
+  color: #FF79DA;
+}
 footer a:hover, footer .fas:hover {
   color: #FF79DA;
 }
@@ -313,9 +324,20 @@ footer h5 {
   margin: 0;
   font-weight: 500;
 }
+@media (min-width: 600px) {
+  footer h5 {
+    text-align: center;
+  }
+}
 footer ul {
   padding-left: 15px;
   list-style-type: none;
+}
+@media (min-width: 600px) {
+  footer ul {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 footer li {
   margin-top: 5px;
@@ -353,7 +375,7 @@ footer .fas {
   }
 }
 .container-menu .title {
-  padding: 10px 0 0 20px;
+  padding: 10px 0 0 10px;
   font-size: 1.2rem;
   position: relative;
 }
@@ -361,12 +383,13 @@ footer .fas {
   font-family: "Shrikhand", cursif;
   font-weight: 500;
   font-size: 1.5rem;
+  margin: 20px 0 0 0;
 }
 .container-menu .title .fas {
   position: absolute;
-  font-size: 1.5rem;
+  font-size: 1rem;
   right: 30px;
-  top: 31px;
+  top: 38px;
   cursor: pointer;
   color: #f6f6f6;
   text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2.5px black;
@@ -399,7 +422,31 @@ footer .fas {
   width: 40px;
   font-weight: normal;
 }
+.card__menu__item {
+  animation: slide 2.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
 
+.slide-delay1 {
+  animation-delay: 0.4s;
+}
+
+.slide-delay2 {
+  animation-delay: 0.8s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(1000px);
+    opacity: 0;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .meal {
   background: #FFF;
   border-radius: 15px;
@@ -408,7 +455,6 @@ footer .fas {
   display: flex;
   cursor: pointer;
   box-shadow: 4px 4px 16px #b8b7b7;
-  animation: slide 1.5s linear both;
 }
 .meal__info {
   padding: 10px;
@@ -446,31 +492,6 @@ footer .fas {
   margin: 10px 0 0 0;
 }
 
-.slide-delay1 {
-  animation-delay: 0.4s;
-}
-
-.slide-delay2 {
-  animation-delay: 0.8s;
-}
-
-.slide-delay3 {
-  animation-delay: 1.2s;
-}
-
-@keyframes slide {
-  0% {
-    transform: translateY(1000px);
-    opacity: 0;
-  }
-  80% {
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
 .check {
   display: flex;
   background: #99E2D0;
